Skip to content

Investigate if deinitialize calls can be prevented

The playlist and player controller classes currently expose "deinitialize" methods to unsubscribe from core events, which is not a very clean design and might hide potential underlying issue such as a retain cycle. Ideally, we would want to use the dealloc method to unsubscribe.

This ticket is a reminder to investigate the issue as we go.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information