macosx: remove unnecessary deinitialize calls (fixes #21914)

The macOS interface is deallocated after the player/playlist, so we need to unsubscribe from either as soon as we know that the app will terminate.