modules/gui/macosx/playlist/VLCPlaylistController.h
@@ -41,7 +41,6 @@ extern NSString *VLCPlaylistItemsRemoved;
 @interface VLCPlaylistController : NSObject
 
 - (instancetype)initWithPlaylist:(vlc_playlist_t *)playlist;
-- (void)deinitialize;
 
 /**
  * The vlc core playlist controlled by the instance of this class
